crates/reinhardt-pages/tests/ui/page/fail/component_missing_required_prop.stderr
error[E0277]: the member `bon::__::Unset<item>` was not set, but this method requires it to be set
  --> tests/ui/page/fail/component_missing_required_prop.rs:28:10
   |
28 |       let _ = page!(|| {
   |  _____________^
29 | |         div {
30 | |             Card {}
31 | |         }
32 | |     });
   | |______^ the member `bon::__::Unset<item>` was not set, but this method requires it to be set
   |
   = help: the trait `bon::__::IsSet` is not implemented for `bon::__::Unset<item>`
note: required for `card_props_builder::Empty` to implement `IsComplete`
  --> tests/ui/page/fail/component_missing_required_prop.rs:10:10
   |
10 | #[derive(bon::Builder)]
   |          ^^^^^^^^^^^^ type parameter would need to implement `IsComplete`
   = help: consider manually implementing `IsComplete` to avoid undesired bounds
note: required by a bound in `CardPropsBuilder::<S>::build`
  --> tests/ui/page/fail/component_missing_required_prop.rs:10:10
   |
10 | #[derive(bon::Builder)]
   |          ^^^^^^^^^^^^ required by this bound in `CardPropsBuilder::<S>::build`
11 | struct CardProps {
   |        --------- required by a bound in this associated function
   = note: this error originates in the macro `page` which comes from the expansion of the derive macro `bon::Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
